<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityMain"
    android:background="#0d3d5c">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="150sp"
        android:text="@string/play"
        android:id="@+id/buttonPlay"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="40sp" />

    <ImageView
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:id="@+id/imageView"
        android:src="@drawable/squash_logo"
        android:contentDescription="@string/gamelogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/squash"
        android:id="@+id/textLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menuMainBestScore"
        android:id="@+id/textViewHiScoreText"
        android:layout_above="@+id/textViewHiScore"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_label_hiscore"
        android:id="@+id/textViewHiScore"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
